fix
fix bug: enter button overlaps function

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 html{
     font-family: "Roboto", serif;
-    background-color: black;
+    background-color: rgb(200, 211, 235);
     font-size: 16px;
 }
 h1{
@@ -82,6 +82,7 @@ INNER STYLES
     width: 100%;
 }
 .task-box{
+    position: relative;
     border-radius: 7px;
     padding: 15px;
     display: flex;
@@ -118,4 +119,7 @@ i:hover{
 }
 .green-bg{
     background-color: lightgreen;
+}
+@keyframes slide-in{
+    0% {left: 0px;}
 }
